fix: add spacing around links

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+	display: inline-block;
 }
 
 /* ====================== Restaurant Details ====================== */
